v0.7.0
        * Remove depreciated method

v0.6
        * Fix unitary tests
        * Fix binary server to handle daemons better
        * Add unitary test to test the server globaly
        * Log can be called from the controller
	* Update urls and links
	* Important fix for cookies
	* Fix gemspec
	* Improve functional tests (router)
	* Improve executables (status)
	* Improve router (disable verbose)
	* Fix executables (status)
	* Update "nephos" gem to 1.0.4
	* Add new feature Controller.url_for
	* Add new feature log
	* Improve routing helpers (optional url parameter)
	* Add new functional tests (router)
	* Add extension for url (.html, ...)
	* Add improved router helper (simple destination, alias)
	* Fix application generator (replace in the gemfile nephos-server by nephos)
        * Improve guides (more doc, corrections, update)
	* Certificate for sign the gem
        * Add customisable default error page
        * Fix generator (bug when --application on current directory)
	* Improve hooks (add the :only option)
	* Improve documentation
	* Improve routing (more tests, better duplicate / handlement)
	* Improve daemons
	* Improve Rakefile and tests structure
	* Add few functional (router, server, generator) tests
	* Add new unitary tests
	* Big change (ea49dfb0b429f03327447477bfee9bef30dda7ad) on the architecture, massive usage of Rack::Request, review the global architecture, update all unitary tests
	* add hook before_action and after_action
	* improve params
	* improve controller error handlement with STDERR message
	* server can be daemonized

v0.5
	* fix regression on empty response
	* add unitary tests
	* improve gemspec
	* fix severe regression on responder
	* fix environment bug
	* add continuous integration with gitlab
	* fix executables requirements to be testable
	* add cookies management
	* fix regression on content-type from v0.4
	* fix nephos gem (binaries can be used out of an application)