@@ -25,3 +25,5 @@ get url: "/get_cookies", controller: "MainController", method: "get_cookies"
 get url: "/add_cookie", controller: "MainController", method: "add_cookie"
 
 get "/err500", controller: "MainController", method: "err500"
+
+get "/;/cookie", to: "MainController#root"
